--- a/css/style.css
+++ b/css/style.css
@@ -304,24 +304,23 @@ header {
 }
 
 #work-header {
-  display: inline-block;
+  display: inline;
   width: 100%;
   height: 100px;
-  padding: 10px;
 }
 
 .logo {
   display: inline-block;
   margin-left: 20px;
   margin-right: 20px;
-  padding-top: 5px;
+  margin-top: 15px;
   padding-bottom: 5px;
   float: left;
 }
 
 #work-legend {
+  margin-top: 15px;
   margin-left: -10px;
-  display: inline-block;
 }
 
 .var-container {
@@ -345,16 +344,15 @@ header {
 }
 
 .work-content {
-  display: inline-block;
   width:100%;
-  margin-top: 10px;
+  margin-top: 0.5em;
 }
 
 .role {
-  display: inline;
-  width: 49%;
+  width: 100%;
   margin-top: 0em;
   padding: 1.0em;
+  text-align: center;
 }
 
 .role h1 {
