--- a/css/style.css
+++ b/css/style.css
@@ -449,6 +449,7 @@ header {
 }
 
 @media(max-width:720px){
+  /*Me*/
   .me-container {
     width:100%;
     height:100%;
@@ -467,6 +468,7 @@ header {
     transition: 0.8s ease-in;
   }
 
+  /*Work*/
   .work-container {
     width:100%;
     height:100%;
