--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ header {
   display:none;
 }*/
 
-.name {
+.tag {
   /*display:none;*/
   margin-right: 20px;
   margin-top: 15px;
@@ -186,17 +186,36 @@ header {
 
 }
 
+.avatar img {
+  width: 120px;
+  height: 120px;
+  margin-top: 25%;
+  background-size:cover;
+  background-image: url(../assets/me3.jpg);
+  display: inline-block;
+  border-radius: 200px;
+  box-shadow: inset 2px 2px 5px rgba(0,0,0,0.5),inset 0 0 2px 1px rgba(0,0,0,0.05);
+}
+
 .me-content-title {
   width:100%;
   height:100%;
-  margin-top: 25%;
+  margin-top: 20px;
 }
 
-.me-content-title h1 {
+.name h1 {
+  font-family: "futura-pt",sans-serif;
+  font-weight:700;
+  font-style: normal;
+  font-size: 22px;
+  color: #7B7D7C;
+}
+
+.me-content-title p {
   font-family: "futura-pt",sans-serif;
   font-weight:700;
   font-style: italic;
-  font-size: 30px;
+  font-size: 18px;
   color: #7B7D7C;
 }
 
@@ -204,7 +223,7 @@ header {
   font-family: "futura-pt",sans-serif;
   font-weight:700;
   font-style: normal;
-  font-size: 18px;
+  font-size: 14px;
   color: #7B7D7C;
 }
 
