--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ header {
 .avatar img {
   width: 120px;
   height: 120px;
-  margin-top: 25%;
+  margin-top: 22%;
   background-size:cover;
   background-image: url(../assets/me3.jpg);
   display: inline-block;
@@ -204,36 +204,36 @@ header {
 .me-content-title {
   width:100%;
   height:100%;
-  margin-top: 20px;
 }
 
 .name h1 {
-  font-family: "futura-pt",sans-serif;
-  font-weight:700;
+  font-family: "adelle",sans-serif;
+  font-weight:300;
   font-style: normal;
-  font-size: 22px;
+  font-size: 25px;
   color: #7B7D7C;
 }
 
 .me-content-title p {
-  font-family: "futura-pt",sans-serif;
-  font-weight:700;
+  font-family: "adelle",sans-serif;
+  font-weight:300;
   font-style: italic;
   font-size: 18px;
   color: #7B7D7C;
 }
 
 #contact p {
-  font-family: "futura-pt",sans-serif;
-  font-weight:700;
+  font-family: "adelle",sans-serif;
+  font-weight:300;
   font-style: normal;
   font-size: 14px;
   color: #7B7D7C;
 }
 
 #warning p {
-  margin-top: 15%;
-  font-weight:700;
+  font-family: "adelle",sans-serif;
+  font-weight:300;
+  margin-top: 50px;
   font-style: normal;
   font-size: 10px;
   color: #7B7D7C;
