added 960px dots at 90px width

--- a/css/style.css
+++ b/css/style.css
@@ -261,8 +261,6 @@ header {
 }
 
 
-
-
 /* ------  WORK ----- */
 
 #work-canvas {
@@ -545,6 +543,98 @@ header {
   #close-work-bottom {
     display: none;
   }
+}
+
+@media(max-width: 960px) {
+  /*Me*/
+  .dot-element-me {
+    border-radius: 200px;
+    background-color: #7B7D7C;
+    z-index: 2;
+  }
+
+  .dot-element-me.big {
+    width: 90px;
+    height: 90px;
+    cursor: pointer;
+  }
+
+  .dot-element-me.big .title {
+    width: 90px;
+    height: 90px;
+    /*display:none;*/
+    position: fixed;
+    border-radius: 200px;
+    padding:18px;
+    text-align: center;
+  }
+
+  .dot-element-me.big h1 {
+    font-family: "futura-pt",sans-serif;
+    font-weight:700;
+    font-style: italic;
+    font-size: 18px;
+    color: #fff;
+  }
+
+  /*work dots*/
+  .dot-element-work-title, .dot-element-work-row-one, .dot-element-work-row-two, .dot-element-work-row-three  {
+    width: 90px;
+    height: 90px;
+    border-radius: 200px;
+    background-color: #B3B8B6;
+    z-index: 2;
+  }
+
+  .dot-element-work-title .title {
+    width: 90px;
+    height: 90px;
+    /*display:none;*/
+    position: fixed;
+    border-radius: 200px;
+    padding:18px;
+    text-align: center;
+  }
+
+  .dot-element-work-title h1 {
+    font-family: "futura-pt",sans-serif;
+    font-weight:700;
+    font-style: italic;
+    font-size: 18px;
+    color: #fff;
+  }
+
+  .dot-element-work-row-one, .dot-element-work-row-two, .dot-element-work-row-three {
+    cursor: pointer;
+  }
+
+  .dot-element-work-row-one h1, .dot-element-work-row-two h1, .dot-element-work-row-three h1 {
+    font-family: "futura-pt",sans-serif;
+    font-weight:700;
+    font-style: italic;
+    font-size: 16px;
+    color: #fff;
+  }
+
+  .hover-state-work {
+    opacity: 0;
+    border-radius: 200px;
+    width: 90px;
+    height: 90px;
+    margin:0px;
+    padding-top:35px;
+    text-align: center;
+  }
+
+  /*exceptions*/
+  #sos-barnbyar {
+    padding-top: 22px;
+  }
+
+  #screw-sweden {
+    padding-top: 22px;
+  }
+
 }
 
 @media(max-width:720px){
