--- a/css/style.css
+++ b/css/style.css
@@ -249,7 +249,6 @@ header {
 #close-me {
   right: 10px;
   position: absolute;
-  bottom: 0px;
   float: right;
   font-family: "futura-pt",sans-serif;
   font-weight:700;
@@ -259,6 +258,19 @@ header {
   text-align: left;
   cursor: pointer;
 }
+
+/*display: none;
+position: absolute;
+left: 0px;
+padding: 0.2em;
+font-family: "futura-pt",sans-serif;
+font-weight:700;
+font-style: normal;
+font-size: 18px;
+background-color: #000;
+color: #fff;
+text-align: left;
+cursor: pointer;*/
 
 
 /* ------  WORK ----- */
